# budget-tracker

./: .gitignore  README.md  budget_tracker.spec  pyproject.toml
budget_tracker/: __main__.py  config.py  main.py
budget_tracker/core/: db.py  models.py  money.py
budget_tracker/core/migrations/: 001_init.sql  002_subcategories.sql  003_transactions_goal_id.sql
budget_tracker/core/repositories/: accounts.py  budgets.py  categories.py  goals.py  settings.py  subscriptions.py  transactions.py
budget_tracker/services/: _month.py  account_service.py  budget_service.py  db_location_service.py  goal_service.py  seeder.py  selection_summary.py  settings_service.py  subscription_service.py  summary_service.py  update_service.py
budget_tracker/ui/: main_window.py
budget_tracker/ui/dialogs/: account_dialog.py  budget_dialog.py  category_dialog.py  contribution_dialog.py  goal_dialog.py  subscription_dialog.py  transaction_dialog.py  welcome_dialog.py
budget_tracker/ui/styles/: __init__.py  app.qss.template  stylesheet.py  theme.py
budget_tracker/ui/theme/: __init__.py  app.qss.template  tokens.py
budget_tracker/ui/views/: base.py  budgets_view.py  goals_view.py  home_view.py  settings_view.py  subscriptions_view.py  (+1 more)
installer_src/: __main__.py  install_ops.py  installer.spec  uninstall.py  uninstaller.spec
scripts/: build.ps1  make_icon.py  release.ps1  reset_data.py  seed_demo.py
tests/: conftest.py  test_db.py  test_db_location_service.py  test_money.py  test_repositories.py  test_seeder.py  test_selection_summary.py  test_services.py  test_theme.py
(+9 files in other folders)
