[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "budget-tracker"
version = "0.1.0"
description = "A modern, locally-stored personal budget tracker built with PySide 6."
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Aswin Raj K", email = "developer@snello.co" }]
license = { text = "MIT" }
dependencies = [
    "PySide6>=6.8,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
budget-tracker = "budget_tracker.main:main"

[tool.setuptools.packages.find]
include = ["budget_tracker*"]

[tool.setuptools.package-data]
budget_tracker = [
    "core/migrations/*.sql",
    "ui/styles/*.qss",
    "ui/styles/*.template",
    "ui/styles/themes/*.json",
    "ui/icons/*.svg",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
